5.1.7 -> 5.1.8:
    - jbj: yarn: wire up rpmtsFini, mark rpmtsFree for destruction.
    - jbj: yarn: for now, don't assert fail, just print FIXME.
    - jbj: yarn: wire up headerScrub, eliminate header{Link,Unlink}.
    - jbj: make misc identical to HEAD (hmm @WITH_PCRE_LDFLAGS@ is AWOL)
    - devzero2000: add mkdtemp portability function to -lrpmmisc
    - jbj: yarn: wire up rpmteFini, eliminate rpmteFree.
    - jbj: yarn: wire up rpmsxFini, eliminate rpmsxFree.
    - jbj: yarn: wire up rpmfiFini, eliminate rpmfiFree.
    - jbj: yarn: wire up rpmgiFini, eliminate rpmgiFree.
    - jbj: rpmtsi: use __FUNCTION__ rather than adding a 2nd arg everywhere.
    - jbj: pgpDig: fix: rpmioFreePoolItem() can return non-NULL, clear ts->dig.
    - jbj: rpmio: add --pgpdebug for pgpDig debugging.
    - jbj: yarn: wire up rpmtsiFini, eliminate rpmtsiFree.
    - jbj: yarn: wire up rpmpsmFini, eliminate rpmpsmFree.
    - jbj: yarn: wire up rpmxarFini, eliminate rpmxarFree.
    - jbj: yarn: wire up pgpDigFini, eliminate pgpDigFree.
    - jbj: yarn: wire up urlFini, eliminate XurlFree.
    - jbj: yarn: wire up fdFini, eliminate XfdFree.
    - jbj: url: fix: u->use clobbers the lock from the pool.
    - jbj: rpmds: fix: rpmdsDup needs to go through rpmdsGetPool() too.
    - jbj: yarn: use void * use, not yarnLock use, to hide the details.
    - jbj: yarn: wrap use/pool into a per-object "struct rpmioItem_s _item".
    - jbj: yarn: stub in (*init)() and (*fini)() pool item methods.
    - jbj: yarn: add a (*dbg)() formatter to make fdLink() generic.
    - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
    - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
    - jbj: yarn: convert rpmdb refcount to usage mutex.
    - jbj: yarn: convert psm refcount to usage mutex.
    - jbj: yarn: convert rpmxar refcount to usage mutex.
    - jbj: yarn: convert pgpDig refcount to usage mutex (avoid recurse deadlock).