@@ -116,22 +116,6 @@ int _rpmds_nopromote = 1;
 int _rpmds_unspecified_epoch_noise = 0;
 /*@=exportheadervar@*/
 
-/*@unchecked@*/ /*@null@*/
-rpmioPool _rpmdsPool;
-
-static rpmds rpmdsGetPool(/*@null@*/ rpmioPool pool)
-	/*@modifies pool @*/
-{
-    rpmds ds;
-
-    if (_rpmdsPool == NULL) {
-	_rpmdsPool = rpmioNewPool("ds", sizeof(*ds), -1, _rpmds_debug,
-			NULL, NULL, NULL);
-	pool = _rpmdsPool;
-    }
-    return (rpmds) rpmioGetPool(pool, sizeof(*ds));
-}
-
 /**
  * Return dependency set type string.
  * @param tagN		dependency set tag
@@ -166,43 +150,48 @@ const char * rpmdsType(const rpmds ds)
     return rpmdsTagName(rpmdsTagN(ds));
 }
 
+static void rpmdsFini(void * _ds)
+{
+    rpmds ds = _ds;
+
+    if (ds->Count > 0) {
+	ds->N = _free(ds->N);
+	ds->EVR = _free(ds->EVR);
+	ds->Flags = _free(ds->Flags);
+	ds->h = headerFree(ds->h);
+    }
+
+    ds->DNEVR = _free(ds->DNEVR);
+    ds->ns.str = _free(ds->ns.str);
+    memset(&ds->ns, 0, sizeof(ds->ns));
+    ds->A = _free(ds->A);
+    ds->Color = _free(ds->Color);
+    ds->Refs = _free(ds->Refs);
+    ds->Result = _free(ds->Result);
+    ds->exclude = mireFreeAll(ds->exclude, ds->nexclude);
+    ds->include = mireFreeAll(ds->include, ds->ninclude);
+}
+
 rpmds rpmdsFree(rpmds ds)
 {
-    if (ds == NULL)
-	return NULL;
-
-    yarnPossess(ds->_item.use);
-/*@-modfilesys@*/
-if (_rpmds_debug)
-fprintf(stderr, "--> ds %p -- %ld %s at %s:%u\n", ds, yarnPeekLock(ds->_item.use), ds->Type, __FILE__, __LINE__);
-/*@=modfilesys@*/
-    if (yarnPeekLock(ds->_item.use) <= 1L) {
-/*@-modfilesys@*/
-if (_rpmds_debug < 0)
-fprintf(stderr, "*** ds %p\t%s[%d]\n", ds, ds->Type, ds->Count);
-/*@=modfilesys@*/
-
-	if (ds->Count > 0) {
-	    ds->N = _free(ds->N);
-	    ds->EVR = _free(ds->EVR);
-	    ds->Flags = _free(ds->Flags);
-	    ds->h = headerFree(ds->h);
-	}
-
-	ds->DNEVR = _free(ds->DNEVR);
-	ds->ns.str = _free(ds->ns.str);
-	memset(&ds->ns, 0, sizeof(ds->ns));
-	ds->A = _free(ds->A);
-	ds->Color = _free(ds->Color);
-	ds->Refs = _free(ds->Refs);
-	ds->Result = _free(ds->Result);
-	ds->exclude = mireFreeAll(ds->exclude, ds->nexclude);
-	ds->include = mireFreeAll(ds->include, ds->ninclude);
-
-	ds = (rpmds) rpmioPutPool((rpmioItem)ds);
-    } else
-	yarnTwist(ds->_item.use, BY, -1);
+    (void)rpmioFreePoolItem((rpmioItem)ds, __FUNCTION__, __FILE__, __LINE__);
     return NULL;
+}
+
+/*@unchecked@*/ /*@null@*/
+rpmioPool _rpmdsPool;
+
+static rpmds rpmdsGetPool(/*@null@*/ rpmioPool pool)
+	/*@modifies pool @*/
+{
+    rpmds ds;
+
+    if (_rpmdsPool == NULL) {
+	_rpmdsPool = rpmioNewPool("ds", sizeof(*ds), -1, _rpmds_debug,
+			NULL, NULL, rpmdsFini);
+	pool = _rpmdsPool;
+    }
+    return (rpmds) rpmioGetPool(pool, sizeof(*ds));
 }
 
 static /*@null@*/
