@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: wire up rpmdsFini, mark rpmdsFree for destruction.
     - jbj: yarn: wire up rpmtsFini, mark rpmtsFree for destruction.
     - jbj: yarn: for now, don't assert fail, just print FIXME.
     - jbj: yarn: wire up headerScrub, eliminate header{Link,Unlink}.
